# MathCATForC

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build-android.cmd  build-android.sh  build-ios.sh  build-win.cmd  build.rs  cbindgen-c.toml  cbindgen.toml  copy.sh
.github/workflows/: automaticRelease.yaml
Example/: mathcat-c.h  mathcat.h  test.c  test.cpp
c-example/: mathcat.h  test.c  test.cpp
c-example/Rules/Languages/es/: unicode.yaml
c-example/Rules/Languages/fr/: unicode.yaml
c-example/Rules/Languages/id/: unicode-full.yaml  unicode.yaml
scripts/: Makefile  build-android-local.cmd  build-android.cmd  build-ios-local.sh  build-ios.sh  build-win-local.cmd  build-win.cmd  build.sh  copy.sh
src/: lib.rs
