[package]
name = "mathcat_c"
version = "0.7.0-rc.2"
authors = ["Neil Soiffer <soiffer@alum.mit.edu>"]
edition = "2021"
license = "MIT"
description = "C/C++ interface for MathCAT (for MathCAT info, see crates.io or nsoiffer.github.io/MathCAT)"
resolver = "2"    # allows different build dependency features

[features]
"include-zip" = ["mathcat/include-zip"]  # include the zip files in the build

[dependencies]
mathcat = { version = "0.7.0-rc.2"}  # for building, we want the zip files so we can include them separately
# mathcat = { path= "../MathCAT/"}  # for building, we want the zip files so we can include them separately

[lib]
name = "libmathcat_c"
crate-type = ["cdylib"]      # Creates dynamic lib

[build-dependencies]
zip = { version = "4.3", default-features = false, features = ["bzip2"] }
cbindgen = "0.29"
# for testing MathCAT without having to publish a new version (change two occurences)
mathcat = {version = "0.7.0-rc.2"}     # for building, we want the zip files so we can include them separately
# mathcat = {path = "../MathCAT/" }     # for building, we want the zip files so we can include them separately

[profile.release]
debug = true
lto = true
# opt-level = "z"  # Optimize for size.
